--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,180 +2,192 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 25.02.20 16:00
+  ~ Last modified 07.03.20 16:57
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@color/colorPrimaryDark"
-
-	xmlns:tools="http://schemas.android.com/tools"
+<layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:id="@+id/appBarProfile"
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/collapseBarHeight"
-		android:theme="@style/AppTheme.AppBarOverlay" >
+	<data>
 
-		<com.google.android.material.appbar.CollapsingToolbarLayout
-			android:id="@+id/collapseBarProfile"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			app:collapsedTitleTextAppearance="@style/ToolbarTitle"
-			app:contentScrim="@color/colorPrimary"
-			app:expandedTitleTextAppearance="@style/CollapsingToolbarExpandedTitleWhite"
+		<variable
+			name="viewModel"
+			type="com.mmdev.roove.ui.profile.RemoteRepoViewModel" />
 
-			app:layout_scrollFlags="scroll|exitUntilCollapsed"
-			app:title="@string/default_name">
+	</data>
 
-
-			<androidx.viewpager2.widget.ViewPager2
-				android:id="@+id/viewPagerProfilePhotos"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:background="@color/colorPrimary" />
-
-			<com.google.android.material.tabs.TabLayout
-				android:id="@+id/tlDotsIndicatorProfile"
-				android:layout_width="match_parent"
-				android:layout_height="10dp"
-				android:layout_gravity="bottom"
-				android:layout_marginBottom="8dp"
-				android:background="@color/transparent"
-
-				app:tabBackground="@drawable/dot_unselected_state"
-				app:tabIndicator="@drawable/dot_selection_indicator"
-				app:tabIndicatorColor="@color/gradient1"
-				app:tabIndicatorGravity="center"
-				app:tabGravity="center"
-				app:tabMaxWidth="12dp" />
-
-			<androidx.appcompat.widget.Toolbar
-				android:id="@+id/toolbarProfile"
-				android:layout_width="match_parent"
-				android:layout_height="?attr/actionBarSize"
-				app:layout_collapseMode="pin"
-				app:menu="@menu/profile_view_menu"
-				app:navigationIcon="@drawable/ic_arrow_back_24dp"
-				app:popupTheme="@style/menuPopupStyle" />
-
-		</com.google.android.material.appbar.CollapsingToolbarLayout>
-
-	</com.google.android.material.appbar.AppBarLayout>
-
-	<androidx.core.widget.NestedScrollView
+	<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:overScrollMode="never"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+		android:background="@color/colorPrimaryDark"
+		>
 
-		<androidx.constraintlayout.widget.ConstraintLayout
+		<com.google.android.material.appbar.AppBarLayout
+			android:id="@+id/appBarProfile"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent" >
+			android:layout_height="@dimen/collapseBarHeight"
+			android:theme="@style/AppTheme.AppBarOverlay" >
 
-			<com.google.android.material.textview.MaterialTextView
-				android:id="@+id/tvProfileAboutHeader"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:padding="@dimen/general_margin_16"
+			<com.google.android.material.appbar.CollapsingToolbarLayout
+				android:id="@+id/collapseBarProfile"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				app:collapsedTitleTextAppearance="@style/ToolbarTitle"
+				app:contentScrim="@color/colorPrimary"
+				app:expandedTitleTextAppearance="@style/CollapsingToolbarExpandedTitleWhite"
 
-				android:text="About"
-				android:textSize="24sp"
-				style="@style/medium_text_white85op"
-
-				app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
-				app:layout_constraintStart_toStartOf="@id/guidelineStart"
-				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintBottom_toTopOf="@id/tvProfileAboutText"
-				/>
-
-			<com.google.android.material.textview.MaterialTextView
-				android:id="@+id/tvProfileAboutText"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:lineSpacingExtra="10sp"
-
-				android:text="@string/default_profile_about_text"
-				android:textSize="18sp"
-				style="@style/regular_text_white85op"
-
-				app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
-				app:layout_constraintStart_toStartOf="@id/guidelineStart"
-				app:layout_constraintTop_toBottomOf="@id/tvProfileAboutHeader"
-				app:layout_constraintBottom_toTopOf="@id/tvProfileWantToGoHeader"
-				/>
-
-			<com.google.android.material.textview.MaterialTextView
-				android:id="@+id/tvProfileWantToGoHeader"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:padding="@dimen/general_margin_16"
-
-				android:text="Хочу сходить"
-				android:textSize="24sp"
-				style="@style/medium_text_white85op"
-
-				app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
-				app:layout_constraintStart_toStartOf="@id/guidelineStart"
-				app:layout_constraintTop_toBottomOf="@id/tvProfileAboutText"
-				app:layout_constraintBottom_toTopOf="@id/rvProfileWantToGoList"
-				/>
-
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/rvProfileWantToGoList"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:clipToPadding="false"
-				android:padding="@dimen/general_margin_8"
-				android:orientation="horizontal"
-				android:visibility="visible"
-				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+				app:layout_scrollFlags="scroll|exitUntilCollapsed"
+				app:title="@{viewModel.retrievedUserItem.baseUserInfo.name, default = @string/default_name}">
 
 
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tvProfileWantToGoHeader"
-				app:layout_constraintBottom_toBottomOf="parent"
+				<androidx.viewpager2.widget.ViewPager2
+					android:id="@+id/viewPagerProfilePhotos"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:background="@color/colorPrimary" />
 
-				tools:listitem="@layout/fragment_profile_places_rv_item"/>
+				<com.google.android.material.tabs.TabLayout
+					android:id="@+id/tlDotsIndicatorProfile"
+					android:layout_width="match_parent"
+					android:layout_height="10dp"
+					android:layout_gravity="bottom"
+					android:layout_marginBottom="8dp"
+					android:background="@color/transparent"
+
+					app:tabBackground="@drawable/dot_unselected_state"
+					app:tabIndicator="@drawable/dot_selection_indicator"
+					app:tabIndicatorColor="@color/gradient1"
+					app:tabIndicatorGravity="center"
+					app:tabGravity="center"
+					app:tabMaxWidth="12dp" />
+
+				<androidx.appcompat.widget.Toolbar
+					android:id="@+id/toolbarProfile"
+					android:layout_width="match_parent"
+					android:layout_height="?attr/actionBarSize"
+					app:layout_collapseMode="pin"
+					app:menu="@menu/profile_view_menu"
+					app:navigationIcon="@drawable/ic_arrow_back_24dp"
+					app:popupTheme="@style/menuPopupStyle" />
+
+			</com.google.android.material.appbar.CollapsingToolbarLayout>
+
+		</com.google.android.material.appbar.AppBarLayout>
+
+		<androidx.core.widget.NestedScrollView
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:overScrollMode="never"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent" >
+
+				<com.google.android.material.textview.MaterialTextView
+					android:id="@+id/tvProfileAboutHeader"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:padding="@dimen/general_margin_16"
+
+					android:text="About"
+					android:textSize="24sp"
+					style="@style/medium_text_white85op"
+
+					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+					app:layout_constraintStart_toStartOf="@id/guidelineStart"
+					app:layout_constraintTop_toTopOf="parent"
+					app:layout_constraintBottom_toTopOf="@id/tvProfileAboutText"
+					/>
+
+				<com.google.android.material.textview.MaterialTextView
+					android:id="@+id/tvProfileAboutText"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:lineSpacingExtra="10sp"
+
+					android:text="@{viewModel.retrievedUserItem.aboutText}"
+					android:textSize="18sp"
+					style="@style/regular_text_white85op"
+
+					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+					app:layout_constraintStart_toStartOf="@id/guidelineStart"
+					app:layout_constraintTop_toBottomOf="@id/tvProfileAboutHeader"
+					app:layout_constraintBottom_toTopOf="@id/tvProfileWantToGoHeader"
+					/>
+
+				<com.google.android.material.textview.MaterialTextView
+					android:id="@+id/tvProfileWantToGoHeader"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:padding="@dimen/general_margin_16"
+
+					android:text="Хочу сходить"
+					android:textSize="24sp"
+					style="@style/medium_text_white85op"
+
+					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+					app:layout_constraintStart_toStartOf="@id/guidelineStart"
+					app:layout_constraintTop_toBottomOf="@id/tvProfileAboutText"
+					app:layout_constraintBottom_toTopOf="@id/rvProfileWantToGoList"
+					/>
+
+				<androidx.recyclerview.widget.RecyclerView
+					android:id="@+id/rvProfileWantToGoList"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:clipToPadding="false"
+					android:padding="@dimen/general_margin_8"
+					android:orientation="horizontal"
+					android:visibility="visible"
+
+					app:bindData="@{viewModel.retrievedUserItem.placesToGo}"
+					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintTop_toBottomOf="@id/tvProfileWantToGoHeader"
+					app:layout_constraintBottom_toBottomOf="parent"
+
+					tools:listitem="@layout/fragment_profile_places_rv_item"/>
 
 
-			<!-- left padding -->
-			<androidx.constraintlayout.widget.Guideline
-				android:id="@+id/guidelineStart"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				app:layout_constraintGuide_begin="@dimen/general_margin_8" />
+				<!-- left padding -->
+				<androidx.constraintlayout.widget.Guideline
+					android:id="@+id/guidelineStart"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:orientation="vertical"
+					app:layout_constraintGuide_begin="@dimen/general_margin_8" />
 
-			<!-- right padding -->
-			<androidx.constraintlayout.widget.Guideline
-				android:id="@+id/guidelineEnd"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				app:layout_constraintGuide_end="@dimen/general_margin_8" />
+				<!-- right padding -->
+				<androidx.constraintlayout.widget.Guideline
+					android:id="@+id/guidelineEnd"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:orientation="vertical"
+					app:layout_constraintGuide_end="@dimen/general_margin_8" />
 
-		</androidx.constraintlayout.widget.ConstraintLayout>
+			</androidx.constraintlayout.widget.ConstraintLayout>
 
-	</androidx.core.widget.NestedScrollView>
+		</androidx.core.widget.NestedScrollView>
 
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/fabProfileSendMessage"
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:layout_margin="@dimen/general_margin_16"
-		android:src="@drawable/ic_profile_send_message_24dp"
-		app:backgroundTint="@color/amethyst"
-		app:rippleColor="@color/black_50"
-		app:layout_anchor="@id/appBarProfile"
-		app:layout_anchorGravity="bottom|right|end" />
+		<com.google.android.material.floatingactionbutton.FloatingActionButton
+			android:id="@+id/fabProfileSendMessage"
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:layout_margin="@dimen/general_margin_16"
+			android:src="@drawable/ic_profile_send_message_24dp"
+			app:backgroundTint="@color/amethyst"
+			app:rippleColor="@color/black_50"
+			app:layout_anchor="@id/appBarProfile"
+			app:layout_anchorGravity="bottom|right|end" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+	</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
