--- a/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 05.03.20 17:11
+  ~ Last modified 07.03.20 18:13
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,8 +16,8 @@
 	<data>
 
 		<variable
-			name="photoUrl"
-			type="String" />
+			name="bindItem"
+			type="com.mmdev.business.core.PhotoItem" />
 
 	</data>
 
@@ -43,7 +43,7 @@
 
 				android:scaleType="centerCrop"
 
-				app:bindImageUrl="@{photoUrl}"
+				app:bindImageUrl="@{bindItem.fileUrl}"
 				android:contentDescription="@string/description_user_photo" />
 
 		</androidx.cardview.widget.CardView>
