--- a/app/src/main/res/layout/fragment_settings_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_photo_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 02.03.20 18:36
+  ~ Last modified 07.03.20 17:16
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,8 +16,8 @@
 	<data>
 
 		<variable
-			name="photoUrl"
-			type="String" />
+			name="bindItem"
+			type="com.mmdev.business.core.PhotoItem" />
 
 	</data>
 
@@ -35,7 +35,7 @@
 			android:background="@color/colorPrimary"
 			android:scaleType="center"
 
-			app:bindImageUrl="@{photoUrl}"
+			app:bindImageUrl="@{bindItem.fileUrl}"
 			app:progressBar="@{pbImageLoading}"
 
 			android:contentDescription="@string/description_user_photo" />
